--- a/#src/html/chunks/_header.html
+++ b/#src/html/chunks/_header.html
@@ -4,8 +4,7 @@
       <div class="header__body">
         <nav class="navbar navbar-dark bg-dark navbar-expand-lg bg-body-tertiary d-flex justify-content-between w-100">
           <div class="container-fluid">
-            <a class="navbar-brand header__logo" href="index.html"><img class="w-100" src="./img/header/logo.png"
-                alt=""> </a>
+            <a class="navbar-brand header__logo" href="index.html"><img src="./img/header/logo.png" alt=""> </a>
 
             <div class="header__right d-flex d-lg-none">
               <div class="header__actions d-flex">
@@ -30,7 +29,7 @@
             </div>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <ul class="navbar-nav mb-2 mb-lg-0 justify-content-between w-100">
                 <li class="nav-item">
                   <a href="#" class="nav-link active" aria-current="page" href="#">Home</a>
                 </li>
